k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: nuke.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuke-app
                port:
                  number: 3000
    - host: portfolio.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app
                port:
                  number: 80
    - host: satskit.dylanvh.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sats-kit-server
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sats-kit-client
                port:
                  number: 80
    - host: pixelpythons.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixel-pythons
                port:
                  number: 3001
    - host: jellyseerr.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
    - host: jelly.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
